Fixes color contrast

--- a/wp-content/themes/dab9/sass/elements/_card.scss
+++ b/wp-content/themes/dab9/sass/elements/_card.scss
@@ -5,14 +5,15 @@
 
 .card {
   flex: 0 1 50%;
+  padding: 10px;
   position: relative;
 
   .entry-header {
-    bottom: 0;
-    left: 0;
+    bottom: 10px;
+    left: 10px;
     padding: 5px 10px;
     position: absolute;
-    width: 100%;
+    right: 10px;
     z-index: 2;
 
     a {
@@ -30,6 +31,7 @@
   }
 
   .wp-post-image {
+    box-shadow: 7px 10px 10px 0 rgba(0, 0, 0, 0.2);
     display: block;
     transition: filter 250ms;
     width: 100%;
@@ -40,6 +42,7 @@
       filter: blur(2px) grayscale(100%);
     }
   }
+
   @media only screen and (min-width: 640px) {
     & {
       flex-basis: 33.3333%;
