--- a/wp-content/themes/dab9/sass/layout/_no-sidebar.scss
+++ b/wp-content/themes/dab9/sass/layout/_no-sidebar.scss
@@ -1,4 +1,5 @@
 #page {
+	background-color: #222222;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -29,7 +30,7 @@
 		}
 
 		.info-label {
-			color: mix(white, $color__text-main, 50%);
+			color: darken($color__text-main, 10%);
 		}
 
 		.video-link {
@@ -48,11 +49,21 @@
 		}
 
 		.description {
-			color: mix(white, $color__text-main, 60%);
+			color: darken($color__text-main, 20%);
 		}
 	}
 }
 
+
+.page {
+	.site-content {
+		margin: 0 auto;
+		max-width: 960px;
+		padding-left: 15px;
+		padding-right: 15px;
+		width: 100%;
+	}
+}
 @media only screen and (min-width: 960px) {
 	.single-post article.post .container {
 		display: flex;
